[package]
name = "waveshare-lcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iocuddle = "0.1.1"
spidev = "0.5.1"
ioctl-rs = "0.2.0"
sysfs_gpio = "0.6.1"


[[example]]
name = "lcd2inch"
path = "src/examples/lcd2inch_demo.rs"
description = "A simple example that shows how to use waveshare-lcd."